Fixed deprecated method references